# Mini-Projects

./: .clang-format  .clang-tidy  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  conanfile.py
CAN_EX/: CMakeLists.txt  can_ex.cpp  can_ex.hpp  crc_check.cpp  crc_check.hpp  tcp_client.cpp  tcp_client.hpp  tcp_server.cpp  tcp_server.hpp
Oprations/: pattern_count.cpp  reverse_the_words.cpp
calc/: CMakeLists.txt  calc.py  calc.robot
conan/profile/: clang-tidy  code-coverage  gcc-debug
extract_root/: CMakeLists.txt  untar.cpp  valid-update-container-UC_SIGNED.tar
file_go/: CMakeLists.txt  delete.go
friend_numbers_cucumber/: CMakeLists.txt  friend_numbers.py
friend_numbers_cucumber/features/: friends_numbers.feature
friend_numbers_cucumber/features/steps/: friend_numbers_steps.py
meta-parser/: CMakeLists.txt  meta-parser.cpp
plugin/: CMakeLists.txt  build.sh  configure.sh  main.cpp  myfirst_projectConfig.h.in  run.sh
plugin/adder/: adder.cpp  adder.hpp
plugin/subtractor/: CMakeLists.txt  subtractor.cpp  subtractor.hpp
scripts/: clang-build  clang-tidy  gcc-build  lint
singleton/: CMakeLists.txt  main.cpp  print_ex.cpp  print_ex.hpp  singleton_class.cpp  singleton_class.hpp
src/: CMakeLists.txt  main.cpp  main.hpp  thread_example.py
toolchain/: aarch64-gcc.cmake  clang-tidy.cmake
untar_project/: CMakeLists.txt  hello-world.cpp  untar.cpp
